--- a/powell-portfolio/package.json
+++ b/powell-portfolio/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -23,7 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
