--- a/powell-portfolio/package.json
+++ b/powell-portfolio/package.json
@@ -2,12 +2,15 @@
   "name": "powell-portfolio",
   "private": true,
   "version": "0.0.0",
+   "homepage": "https://Joelwafula.github.io/POWELL",
   "type": "module",
   "scripts": {
+   
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --outDir build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+    
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
@@ -24,6 +27,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1",
