--- a/powell-portfolio/vercel.json
+++ b/powell-portfolio/vercel.json
@@ -1,6 +1,15 @@
-
 {
-    "REWRITES":[
-        {"SOURCE":"/(.*)", "DESTINATION":"/"}
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/index.js"
+      }
     ]
-}
+  }
